test/bad/nullables/op08.px

c: Char? = 'c'
c?[0]
